# rustwatch

./: .gitignore  Cargo.toml  readme.md
crates/rustwatch/: Cargo.toml
crates/rustwatch-cli/: Cargo.toml
crates/rustwatch-log/: Cargo.toml  license.md
crates/rustwatch-log/source/: level.rs  logger.rs
crates/rustwatch-log/source/formatter/: json.rs
crates/rustwatch-log/source/processor/: mod.rs
crates/rustwatch-log/src/: level.rs  lib.rs  logger.rs  record.rs
crates/rustwatch-log/src/formatter/: json.rs  line.rs  mod.rs
crates/rustwatch-log/src/handler/: console.rs  file.rs  mod.rs
crates/rustwatch-log/src/processor/: context.rs  mod.rs
crates/rustwatch-log/tests/: record.rs
examples/: basic.rs
macros/: logger.rs
source/: formatter.rs  handler.rs  level.rs  lib.rs  logger.rs  processor.rs  record.rs
source/formatter/: json.rs  line.rs  mod.rs
source/handler/: console.rs  file.rs  mod.rs
source/processor/: context.rs  mod.rs
src/: error.rs  level.rs  lib.rs  logger.rs
src/formatter/: mod.rs
src/handler/: mod.rs
src/processor/: mod.rs
tests/: record.rs
