# Package configurations
[package]
    # The name of the crate as it will appear on crates.io
    name = "rustwatch"
    # A concise description of the crate’s purpose (shown on crates.io and docs.rs)
    description = "First-class logging and monitoring for Rust applications. Deep insights and structured logs, wherever you deploy."
    # Keywords to improve discoverability on crates.io
    keywords = ["logging", "logger", "log", "rust", "rustwatch"]
    # Author information (name and email)
    authors = ["Selçuk Çukur <hello@selcukcukur.me>"]
    # License identifier (SPDX format, e.g. MIT, Apache-2.0)
    license = "MIT"
    # Current crate version (Semantic Versioning compliant)
    version = "0.2.2"

    # Rust edition (modern syntax and features)
    edition = "2024"
    # Crates.io category (used for classification and discoverability)
    categories = ["development-tools", "development-tools::debugging", "development-tools::profiling"]
    # Documentation URL (published API reference on docs.rs)
    documentation = "https://docs.rs/rustwatch"
    # Repository URL (source code and issue tracker)
    repository = "https://github.com/selcukcukur/rustwatch"
    # Path to the readme file (displayed on crates.io)
    readme = "readme.md"

# Dependency configurations
[dependencies]
    # Chrono provides date and time utilities (timestamps in log records)
    chrono = "0"
    # Chrono-tz adds timezone support for Chrono (used for timezone-aware logging)
    chrono-tz = "0"

    # Serde is the core serialization/deserialization framework
    serde = { version = "1", features = ["derive"] }
    # Serde JSON is the JSON backend for Serde (used for structured log output)
    serde_json = "1"
thiserror = "2.0.18"

# Library configuration
[lib]
    # The library name (as exposed to other crates)
    name = "rustwatch"

    # Path to the library entry point (main source file)
    path = "src/lib.rs"
