# Package configurations
[package]
    # The name of the crate as it will appear on crates.io
    name = "rustwatch-cli"
    # A concise description of the crate’s purpose (shown on crates.io and docs.rs)
    description = "Stream your logs to files, sockets, databases, inboxes, and the cloud."
    # Keywords to improve discoverability on crates.io
    keywords = ["logging", "logger", "log", "rust", "rustwatch"]
    # Author information (name and email)
    authors = ["Selçuk Çukur <hello@selcukcukur.me>"]
    # License identifier (SPDX format, e.g. MIT, Apache-2.0)
    license = "MIT"
    # Current crate version (Semantic Versioning compliant)
    version = "0.1.0"

    # Rust edition (modern syntax and features)
    edition = "2024"
    # Crates.io category (used for classification and discoverability)
    categories = ["development-tools", "development-tools::debugging", "development-tools::profiling"]
    # Documentation URL (published API reference on docs.rs)
    documentation = "https://docs.rs/rustwatch"
    # Repository URL (source code and issue tracker)
    repository = "https://github.com/selcukcukur/rustwatch"
    # Path to the readme file (displayed on crates.io)
    readme = "readme.md"

# Dependency configurations
[dependencies]

# Binary artifact configuration
[[bin]]
    # The binary name (the command users will run)
    name = "rustwatch"

    # Path to the binary entry point (main source file)
    path = "src/main.rs"
